--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	copyright 2014 git training
-	adding changes before rebasing conflicts 
+	some silly changes from master branch
 -->
 <head>
 	<title>a great website website</title>
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- bleep blorp -->
 		<p>
-			i'm not sure what will go here, but it will be nice
+			github is boring
 		</p>
 	</main>
 	<footer class="container">
