--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	copyright 2014 git training
-	some silly changes from master branch
+
 -->
 <head>
-	<title>a great website website</title>
+	<title>lots of trouble in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
