--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 
 -->
 <head>
-	<title>lots of trouble in a little repo</title>
+	<title>updating title for stash example </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 <body>
 	<main class="container">
 		<p>
-			github is boring
+			adding more important content here
 		</p>
 	</main>
 	<footer class="container">
